--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-sesiones/tabla-sesiones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-sesiones/tabla-sesiones.component.html
@@ -2,7 +2,7 @@
   <table mat-table matSort [dataSource]="dataSource">
 
     <ng-container matColumnDef="fechaSolicitud">
-      <th mat-header-cell *matHeaderCellDef> Fecha de la solicitud </th>
+      <th mat-header-cell *matHeaderCellDef> Fecha de la solicitud s</th>
       <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaSolicitud | date: 'dd/MM/yyyy' }}</b> </td>
 
     </ng-container>
