--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col" *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.modificacionContractual || solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.novedadContractual">
           <b class="label-left color-blue">
-            {{ solicitudes.novedadContractual.numeroSolicitud }}
+            {{ solicitudes.numeroSolicitud }}
           </b>
         </div>
         <div class="col" *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.controversiaContractual">
