--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/formulario-proyectos/formulario-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/formulario-proyectos/formulario-proyectos.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="text-center">
     <h1 class="title-menu--h1">
-      <span *ngIf="!bitPuedoEditar"> Ver detalle {{bitPuedoEditar}} </span>
+      <span *ngIf="!bitPuedoEditar"> Ver detalle  </span>
       <span *ngIf="bitPuedoEditar"> Ver detalle / Editar </span>
 
       Infraestructura
