Control De Cambios Responsables Fiduciaria

--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-registrar-participantes/form-registrar-participantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-registrar-participantes/form-registrar-participantes.component.html
@@ -12,9 +12,9 @@
       <ng-template #noEsVerDetalle>
           {{ esRegistroNuevo === true ? 'Registrar' : 'Ver detalle/Editar' }} participantes de la sesión {{ objetoComiteTecnico.numeroComite }}
       </ng-template>
-    </h1>
+    </h1> 
   </div>
-  <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()" *ngIf="esVerDetalle !== true">
+  <form [formGroup]="addressForm" novalidate  *ngIf="esVerDetalle !== true">
     <div class="row px-5em mt-2em mb-2em">
       <div class="pr-1">
         <label
@@ -212,11 +212,7 @@
       </button>
     </div>
 
-    <div class="text-center">
-      <button mat-button color="warn" class="btn-guardar" type="submit">
-        <img src="assets/img/icon/guardar.svg" alt="Guardar" />
-      </button>
-    </div>
+  
   </form>
   <div *ngIf="esVerDetalle === true">
     <div class="row px-miembros mt-2em mb-2em">
@@ -252,6 +248,202 @@
           </div>
       </mat-card-content>
     </mat-card>
+  </div>
+
+  <!--  
+    Control de Cambios 
+  -->
+  <div>
+    <mat-card class="shipping-card">
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text">Responsable secretaria de comité </mat-card-title>
+      </mat-card-header>
+
+      <mat-card-content>
+        <div>
+          <div *ngFor="let responsable of responsables.controls; let i = index">
+            <div [formGroup]="responsable">
+              <mat-card-title class="header-card--text alineacion-titulos2 pl-0"> Responsable {{ i + 1 }} </mat-card-title>
+              <div class="row">
+                <div class="pr-1">
+                  <label
+                    class="label-left"
+                    for="nombre"
+                    [class.color-secondaryColor]="
+                      (responsable.get('nombre').invalid && responsable.get('nombre').touched) ||
+                      (responsable.get('nombre').invalid && estaEditando)
+                    "
+                  >
+                    Nombre secretario
+                  </label>
+                </div>
+                <div class="col d-flex">
+                  <mat-form-field class="full-width">
+                    <input matInput #nombreResponsable type="text" formControlName="nombre" maxlength="300" required/>
+                    <input type="hidden" formControlName="sesionResponsableId" />
+                  </mat-form-field>
+                  <span
+                    class="contador"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Campo alfanumérico"
+                    matTooltipClass="info-tooltip"
+                  >
+                    {{ 300 - nombreResponsable.value.length }}
+                  </span>
+                  <span class="icon-incompleto">
+                    <img
+                      class="icon-incompleto--img"
+                      src="assets/img/icon/incompleto.svg"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
+                      *ngIf="
+                        (responsable.get('nombre').invalid && responsable.get('nombre').touched) ||
+                        (responsable.get('nombre').invalid && estaEditando)
+                      "
+                    />
+                  </span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="pr-1">
+                  <label
+                    class="label-left"
+                    for="cargo"
+                    [class.color-secondaryColor]="
+                    (responsable.get('cargo').invalid && responsable.get('cargo').touched) ||
+                    (responsable.get('cargo').invalid && estaEditando)
+                  "
+                  >
+                    Cargo
+                  </label>
+                </div>
+                <div class="col d-flex">
+                  <mat-form-field class="full-width">
+                    <input matInput #cargo type="text" formControlName="cargo" maxlength="50"  />
+                  </mat-form-field>
+                  <span
+                    class="contador"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Campo alfanumérico"
+                    matTooltipClass="info-tooltip"
+                  >
+                    {{ 50 - cargo.value.length }}
+                  </span>
+                  <span class="icon-incompleto">
+                    <img
+                      class="icon-incompleto--img"
+                      src="assets/img/icon/incompleto.svg"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
+                      *ngIf="
+                        (responsable.get('cargo').invalid && responsable.get('cargo').touched) ||
+                        (responsable.get('cargo').invalid && estaEditando)
+                      "
+                    />
+                  </span>
+                </div>
+              </div>
+              <div class="row">
+                <div class="pr-1">
+                  <label
+                    class="label-left"
+                    for="entidad"
+                    [class.color-secondaryColor]="
+                    (responsable.get('entidad').invalid && responsable.get('entidad').touched) ||
+                    (responsable.get('entidad').invalid && estaEditando)
+                  "
+                  >
+                    Entidad
+                  </label>
+                </div>
+                <div class="col d-flex">
+                  <mat-form-field class="full-width">
+                    <input matInput #entidad type="text" formControlName="entidad" maxlength="100" />
+                  </mat-form-field>
+                  <span
+                    class="contador"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Campo alfanumérico"
+                    matTooltipClass="info-tooltip"
+                  >
+                    {{ 100 - entidad.value.length }}
+                  </span>
+                  <span class="icon-incompleto">
+                    <img
+                      class="icon-incompleto--img"
+                      src="assets/img/icon/incompleto.svg"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
+                      *ngIf="
+                        (responsable.get('entidad').invalid && responsable.get('entidad').touched) ||
+                        (responsable.get('entidad').invalid && estaEditando)
+                      "
+                    />
+                  </span>
+                </div>
+              </div>
+              <!---->
+              <div class="row">
+                <div class="pr-1">
+                    <label class="label-left" for="esDelegado" [ngClass]="{
+                      'color-secondaryColor':
+                        (responsable.get('esDelegado').invalid && responsable.get('esDelegado').touched) ||
+                        (responsable.get('esDelegado').invalid && estaEditando)
+                    }">¿Es delegado?</label>
+                </div>
+                <div class="col d-flex">
+                  <mat-radio-group class="radioInput d-flex" formControlName="esDelegado">
+                    <mat-radio-button class="mr-1em" [value]="true">Sí</mat-radio-button>
+                    <mat-radio-button class="mr-1em" [value]="false">No</mat-radio-button>
+                  </mat-radio-group>
+                  <span class="icon-incompleto">
+                      <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                          alt="este campo es requerido" [matTooltipPosition]="'above'"
+                          matTooltip="Debe ingresar la información en el campo para continuar"
+                          matTooltipClass="info-tooltip" *ngIf="
+                          (responsable.get('esDelegado').invalid && responsable.get('esDelegado').touched) ||
+                          (responsable.get('esDelegado').invalid && estaEditando)
+                        " />
+                  </span>
+                </div>
+            </div>
+              <!---->
+              <div class="text-right" *ngIf="responsables.controls.length > 1 && !esVerDetalle">
+                <button
+                  mat-button
+                  color="warn"
+                  type="button" 
+                  class="btn-eliminar"
+                  (click)="openDialogSiNoRes('', '<b>¿Está seguro de eliminar este registro?</b>', i, true)"
+                >
+                  <img src="assets/img/icon/menos.svg" alt="Eliminar responsable" />
+                  Eliminar Responsable
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </mat-card-content> 
+    </mat-card>
+    <div class="text-right"  *ngIf="!esVerDetalle">
+      <button mat-button color="warn" type="button" class="btn-eliminar" (click)="agregaResponsable()">
+        <img src="assets/img/icon/mas.svg" alt="Agregar Responsable" />
+        Agregar Responsable
+      </button>
+    </div>
+
+
+  </div>
+  <div class="text-center"  *ngIf="!esVerDetalle">
+    <button mat-button color="warn" class="btn-guardar" type="button" (click)="onSubmit()">
+      <img src="assets/img/icon/guardar.svg" alt="Guardar" />
+    </button>
   </div>
   <div
     class="text-center"
@@ -354,4 +546,5 @@
       <img src="assets/img/icon/guardar.svg" alt="Guardar" />
     </button>
   </div>
+ 
 </section>
