--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validacion-presupuestal/validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validacion-presupuestal/validacion-presupuestal.component.html
@@ -34,7 +34,7 @@
                 {{ detailavailabilityBudget?.plazoDiasContrato }} dias
             </p>
             <p *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_tradicional">
-              <strong>Plazo  despues de la modificación:</strong>
+              <strong>Plazo después de la modificación:</strong>
               {{ datosContratoProyectoModificadosXNovedad[0]?.plazoEstimadoMesesContrato != null ? datosContratoProyectoModificadosXNovedad[0]?.plazoEstimadoMesesContrato : 0  }} meses /
               {{ datosContratoProyectoModificadosXNovedad[0]?.plazoEstimadoDiasContrato != null ? datosContratoProyectoModificadosXNovedad[0]?.plazoEstimadoDiasContrato  :0 }} dias
             </p>
