--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro-seleccionada/form-orden-giro-seleccionada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro-seleccionada/form-orden-giro-seleccionada.component.html
@@ -206,7 +206,7 @@
 
       <app-accordion-detalle-giro-gog
         [solicitudPago]="solicitudPago"
-        [esVerDetalle]="true"
+        [esVerDetalle]="esVerDetalle"
         [proyecto]="proyecto"
         [contratacionProyectoId]="proyecto.contratacionProyectoId"
       >
