--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
@@ -24,7 +24,7 @@
               </mat-expansion-panel-header>
 
               <app-tercero-causacion-gog  [solicitudPago]="solicitudPago"
-                                          [esVerDetalle]="true"
+                                          [esVerDetalle]="esVerDetalle"
                                           [contratacionProyectoId]="contratacionProyectoId"
                                           [solicitudPagoFase]="solicitudPagoFase"
                                           [esPreconstruccion]="solicitudPagoFase.esPreconstruccion">
