--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -305,7 +305,7 @@
                                                               required
                                                               formControlName="nuevoValorDescuento"
                                                               (keypress)="validateNumberKeypress($event)"
-                                                              (ngModelChange)="checkValueAportante($event, i, j, k, 'aportante')"
+                                                              (ngModelChange)="validateDiscountAportanteValue( $event, i, j, k ); validateMaxSaldoActualAportante($event, i, j, k , aportante.get('nombreAportante').value, aportante.get( 'fuenteRecursos' ).value?.fuenteFinanciacionId);"
                                                               onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                                               oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                                               [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
@@ -605,23 +605,23 @@
                                           </div>
                                       </div>
                                   </div>
-                              </div>
-                          </mat-card-content>
-                      </mat-card>
+                            </div>
+                        </mat-card-content>
+                    </mat-card>
 
                       <div class="text-center mb-2em">
                           <button mat-button
                                   color="warn"
                                   class="btn-guardar"
-                                  [disabled]="criterio.dirty === false"
+                                  [disabled]="criterio.dirty === false && !disableSave(i)"
                                   type="button"
-                                  (click)="guardar()">
+                                  (click)="guardar( i )">
                                   <img src="assets/img/icon/guardar.svg" alt="Regresar">
-                          </button>
-                      </div>
-              </mat-expansion-panel>
-          </mat-accordion>
-      </form>
-  </ng-template>
+                        </button>
+                    </div>
+            </mat-expansion-panel>
+        </mat-accordion>
+    </form>
+</ng-template>
 
 </section>
