--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-solicitud/votacion-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-solicitud/votacion-solicitud.component.html
@@ -16,7 +16,7 @@
           <thead>
             <tr class="mat-header-row cdk-header-row ng-star-inserted">
               <th class="mat-header-cell cdk-header-cell ng-star-inserted">Miembro participante</th>
-              <th class="mat-header-cell cdk-header-cell ng-star-inserted">¿Aprobó?</th>
+              <th class="mat-header-cell cdk-header-cell ng-star-inserted" style="width: 25%;">¿Aprobó?</th>
               <!-- <th class="mat-header-cell cdk-header-cell ng-star-inserted">
                 No aprobó
               </th> -->
@@ -36,15 +36,17 @@
                   <mat-checkbox formControlName="aprobacion"></mat-checkbox>
                 </section> -->
                 <div *ngIf="data.esVerDetalle === true">
-                  <span *ngIf="addressForm.get('aprobacion').value === true">Sí</span>
-                  <span *ngIf="addressForm.get('aprobacion').value !== true">No</span>
+                  <span *ngIf="addressForm.controls[i].get('aprobacion').value === true">Sí</span>
+                  <span *ngIf="addressForm.controls[i].get('aprobacion').value !== true && addressForm.controls[i].get('aprobacion').value !== 'noAplica'">No</span>
+                  <span *ngIf="addressForm.controls[i].get('aprobacion').value === 'noAplica'">No aplica</span>
                 </div>
                 <div *ngIf="data.esVerDetalle !== true">
-                  <mat-radio-group class="radioInput" formControlName="aprobacion">
+                  <mat-radio-group class="radioInput" formControlName="aprobacion" style="width: 13em;">
                     <mat-radio-button [value]="true">Sí</mat-radio-button>
                     <mat-radio-button [value]="false">No</mat-radio-button>
+                    <mat-radio-button value="noAplica">No aplica</mat-radio-button>
                   </mat-radio-group>
-                  <span class="required-form-group">*</span>
+                  <span class="required-form-group" style="margin-top: 5px; margin-left: 0.5em;">*</span>
                 </div>
                 <span class="icon-incompleto">
                   <img
