--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.html
@@ -39,8 +39,8 @@
       </p>
       <p *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo == pTipoDDP.DDP_tradicional">
         <strong>Plazo antes de la modificación:</strong>
-        {{ detailavailabilityBudget?.plazoMesesContrato }} meses /
-        {{ detailavailabilityBudget?.plazoDiasContrato }} dias
+        {{ datosContratoProyectoModificadosXNovedad[0]?.plazoEstimadoMesesContrato != null ? datosContratoProyectoModificadosXNovedad[0]?.plazoMesesContrato : 0  }} meses /
+        {{ datosContratoProyectoModificadosXNovedad[0]?.plazoDiasContrato != null ? datosContratoProyectoModificadosXNovedad[0]?.plazoDiasContrato  :0 }} dias
       </p>
       <p *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo == pTipoDDP.DDP_tradicional && datosContratoProyectoModificadosXNovedad != undefined">
         <strong>Plazo después de la modificación:</strong>
